--- a/src/styles/theme/_variables.scss
+++ b/src/styles/theme/_variables.scss
@@ -12,6 +12,26 @@ $width-sidebar: 344px;
 // Typography
 //
 
+$font-family-global: Montserrat, sans-serif;
+
+$font-color-primary: #19bb4f;
+$font-color-global: #22294c;
+$font-color-muted: #869eb3;
+$font-color-default: #fff;
+
+$font-size-h1: 30px;
+$font-size-h2: 23px;
+
+$font-size-large: 18px;
+$font-size-global: 16px;
+$font-size-small: 14px;
+$font-size-tiny: 12px;
+
+
+$font-weight-thick: 700;
+$font-weight-global: 500;
+$font-weight-thin: 400;
+
 //
 // Colors
 //
