--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -311,6 +311,7 @@ h2 {
 
 .tm-button-continue {
   margin-bottom: -95px!important;
+  z-index: 2;
 }
 
 .tm-button-next {
@@ -350,7 +351,7 @@ input.radioId:checked + .tm-radio-button {
 
 .tm-checkbox-list {
   label {
-    padding: 5px 0;
+    padding: 8px 0;
     white-space: nowrap;
     display: flex;
 
