--- a/src/styles/theme/_variables.scss
+++ b/src/styles/theme/_variables.scss
@@ -43,7 +43,8 @@ $step: 360/20;
   @for $i from 1 through $group-size {
     .uk-pagination LI:nth-child(#{$group-size}n + #{$i}) {
       &.uk-active {
-        $color: hsl(($i - 1)*$step, 80%, 60%);
+        //$color: hsl(($i - 1)*$step, 80%, 60%);
+        color: white;
         background-color: hsl(($i - 1)*$step, 80%, 60%);
       }
     }
