fixes fixes fixes 2

--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -248,7 +248,7 @@ h2 {
 }
 
 .CircularProgressbar .CircularProgressbar-path {
-  stroke: #ffffff!important;
+  stroke: #ffffff;
 }
 
 .tm-indicator__content {
