fixes fixes fixes 3

--- a/src/styles/circular-progressbar-fix.css
+++ b/src/styles/circular-progressbar-fix.css
@@ -1,3 +1,7 @@
+.CircularProgressbar .CircularProgressbar-trail {
+    stroke: rgba(255, 255, 255, 0.3);
+}
+
 .CircularProgressbar .CircularProgressbar-path {
     stroke: #ffffff;
 }
