--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -470,3 +470,80 @@ input.radioId:checked + .tm-radio-button {
   }
 }
 
+
+
+
+
+.tm-app-icon {
+  width: 90px;
+  height: 18px;
+  background: linear-gradient(#36cef9, #037aff);;
+  border-radius: 3px;
+  filter: blur(13,04px);
+}
+
+.tm-text-scaner {
+  color: #00f652;
+  margin: 0;
+}
+
+.tm-text-subscaner {
+  color: rgba(64,98,128,0.5);
+
+}
+
+.tm-button-start {
+  position: relative;
+  width: 110px;
+  height: 110px;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  box-shadow: 0 0 27px 0 rgba(2,196,159,0.55);
+
+  //i {
+  //  font-size: 40px;
+  //  //color: #02c49f;
+  //  color: rgba(2,196,159,0.55);
+  //}
+
+  &:active, &:focus, &:hover {
+    //border-color: #979797;
+    box-shadow: 0 0 22px 0 rgba(2,196,159,0.92);
+  }
+
+  &:before {
+    position: absolute;
+    display: block;
+    width: 476px;
+    height: 476px;
+    top: -170%;
+    left: -170%;
+    background: url(/images/btn-power-circles.png) no-repeat;
+    //background-size: contain;
+    content: "";
+    transform: rotate(-5deg);
+    z-index: -1;
+  }
+}
+
+.tm-scale-header-alt {
+  position: relative;
+  padding-bottom: 90px;
+  color: #02c49f;
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 25px;
+    left: 50%;
+    width: 2px;
+    height: 48px;
+    background-color: rgba(2,196,159,0.2);
+    //background-color: rgba(255, 255, 255, 0.7);
+
+    //color: rgba(2,196,159,0.5);
+
+  }
+}
