--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -493,6 +493,9 @@ input.radioId:checked + .tm-radio-button {
 }
 
 .tm-button-start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 110px;
   height: 110px;
