--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -278,6 +278,10 @@ h2 {
   min-height: 100%;
   background-color: #fff;
   border-radius: 5px;
+
+  &.tm-content-start {
+    max-width: 500px;
+  }
 }
 
 .tm-content-decoration {
