--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -100,7 +100,7 @@ h2 {
 .uk-button-default {
   background-color: transparent;
   color: #c1cdd9;
-  border: 1px solid #c1cdd9;
+  border: 1px solid #999999;
 
   &.uk-light {
     color: $font-color-default;
