--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -740,3 +740,9 @@ input.radioId:checked + .tm-radio-button {
 .tm-margin-megalarge {
   margin-top: 110px;
 }
+
+.tm-bottom-panel {
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  padding-top: 10px;
+}
