--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -723,6 +723,12 @@ input.radioId:checked + .tm-radio-button {
   }
 }
 
+@media (min-width: 960px) and (max-width: 1139px) {
+  .tm-summary {
+    padding: 20px 25px 20px 0;
+  }
+}
+
 @media (min-width: 1140px) {
   .tm-main {
     padding-right: 334px;
@@ -1002,17 +1008,3 @@ input.radioId:checked + .tm-radio-button {
     padding: 20px;
   }
 }
-
-//.tm-modal-close {
-//  top: 20px;
-//  right: 20px;
-//
-//  svg {
-//    width: 16px;
-//    height: 16px;
-//
-//    line {
-//      stroke-width: 2px;
-//    }
-//  }
-//}
