--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -756,6 +756,9 @@ input.radioId:checked + .tm-radio-button {
   .styles_closeButton__20ID4:hover svg, .styles_closeButton__20ID4:focus svg, .styles_closeButton__20ID4:active svg {
     fill: #212324; }
 
+.tm-modal-small {
+  max-width: 450px; }
+
 @media (max-width: 639px) {
   .styles_modal__gNwvD {
     padding: 20px; } }
