--- a/src/styles/theme/_custom.scss
+++ b/src/styles/theme/_custom.scss
@@ -983,7 +983,8 @@ input.radioId:checked + .tm-radio-button {
 }
 
 .tm-modal-small {
-  max-width: 460px;
+  max-width: 420px;
+  padding: 0 40px;
 }
 
 .tm-modal-description {
